[package]
name = "demagnetize"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Convert magnet links to .torrent files"
authors = ["John Thorvald Wodder II <demagnetize-rs@varonathe.org>"]
repository = "https://github.com/jwodder/demagnetize-rs"
documentation = "https://github.com/jwodder/demagnetize-rs"
license = "MIT"
keywords = ["bittorent", "magnet-link", "torrent"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/.*"]

[dependencies]
anstream = "0.3.2"
anstyle = "1.0.1"
bendy = "0.3.3"
bytes = "1.4.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
clap = { version = "4.3.11", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
data-encoding = "2.4.0"
fern = "0.6.2"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
log = "0.4.19"
patharg = { version = "0.3.0", features = ["tokio"] }
pin-project-lite = "0.2.10"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.11.18"
sha1 = "0.10.5"
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["fs", "io-util", "macros", "sync", "rt", "rt-multi-thread", "time", "net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
url = "2.4.0"

[dev-dependencies]
assert_cmd = "2.0.11"
tempfile = "3.6.0"
