[package]
name = "demagnetize"
version = "0.2.0-dev"
edition = "2021"
rust-version = "1.70"
description = "Convert magnet links to .torrent files"
authors = ["John Thorvald Wodder II <demagnetize-rs@varonathe.org>"]
repository = "https://github.com/jwodder/demagnetize-rs"
documentation = "https://github.com/jwodder/demagnetize-rs"
license = "MIT"
keywords = ["bittorent", "magnet-link", "torrent"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["/.*"]

[dependencies]
anstream = "0.6.4"
anstyle = "1.0.4"
bendy = "0.3.3"
bytes = "1.5.0"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std"] }
clap = { version = "4.4.7", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
data-encoding = "2.4.0"
fern = "0.6.2"
futures = { version = "0.3.29", default-features = false, features = ["std"] }
log = "0.4.20"
patharg = { version = "0.3.0", features = ["tokio"] }
pin-project-lite = "0.2.13"
rand = "0.8.5"
rand_distr = "0.4.3"
reqwest = "0.11.22"
sha1 = "0.10.6"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["fs", "io-util", "macros", "sync", "rt", "rt-multi-thread", "time", "net"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
url = "2.4.1"

[dev-dependencies]
assert_cmd = "2.0.12"
tempfile = "3.8.1"
